erDiagram
    users ||--o{ procurement_entries : "submitted_by"
    users ||--o{ procurement_entries : "manager_approved_by"
    users ||--o{ procurement_entries : "accountant_approved_by"
    users ||--o{ procurement_entries : "admin_approved_by"
    users ||--o{ daily_reports : "supervisor_id"
    users ||--o{ petty_cash_issuances : "issued_by [CEO]"
    users ||--o{ petty_cash_issuances : "issued_to [Accountant]"
    users ||--o{ petty_cash_expenses : "approved_by"
    users ||--o{ audit_logs : "actor_id"

    processes ||--o{ machines : "process_id"
    machines ||--o{ daily_reports : "machine_id"
    daily_reports ||--o| process_reject_logs : "report_id"
    processes ||--o{ process_reject_logs : "process_id"

    petty_cash_issuances ||--o{ petty_cash_expenses : "issuance_id"

    users {
        int id PK
        varchar name
        varchar username UK
        varchar password_hash
        varbinary password_encrypted "nullable — legacy vault copy"
        varchar role "CEO|Manager|Accountant|Procurement Officer"
        varchar status "Active|Banned"
        datetime created_at
    }
    processes {
        int id PK
        varchar name "Rounding|Sanding|PVC (K Line)|PVC (O Line)|Cups|Packaging / Sewing"
        text description
        varchar status "Active"
    }
    machines {
        int id PK
        varchar code UK "R1 R2 S1 S2 K1 O1"
        varchar name
        int process_id FK
        varchar status "Operational|Maintenance|Down"
    }
    daily_reports {
        int id PK
        date report_date
        varchar shift "Morning|Afternoon|Night"
        int supervisor_id FK
        int machine_id FK
        int units_produced "Units Processed [gross]"
        int good_units "DERIVED: units - rejects"
        text supervisor_notes
        datetime created_at
    }
    process_reject_logs {
        int id PK
        int report_id FK
        int process_id FK
        int partial_reject_count "reworkable"
        int total_reject_count "scrapped"
        varchar reject_reason
        varchar root_cause
    }
    procurement_entries {
        int id PK
        varchar reference_no UK "PRC-YYYY-NNNN"
        int submitted_by FK
        varchar supplier
        varchar item_name
        varchar category
        decimal quantity
        varchar unit
        decimal unit_cost
        decimal total_cost "qty × unit_cost"
        varchar status "Pending Manager Review|Pending Accountant Review|Finalized|Rejected"
        int manager_approved_by FK
        datetime manager_approved_at
        text manager_notes
        int accountant_approved_by FK
        datetime accountant_approved_at
        text accountant_notes
        int admin_approved_by FK
        datetime admin_approved_at
        text admin_notes
        text rejection_reason
        date date
        datetime created_at
    }
    petty_cash_issuances {
        int id PK
        varchar voucher_no UK "PV-YYYY-NNNN"
        int issued_to FK "Accountant only [app rule]"
        int issued_by FK "CEO only [app rule]"
        decimal amount "800,000 – 7,000,000 TZS [app rule]"
        varchar purpose
        varchar status "Active|Closed"
        date issued_date
        datetime created_at
    }
    petty_cash_expenses {
        int id PK
        int issuance_id FK
        date expense_date
        varchar category
        varchar description
        decimal amount
        varchar receipt_no
        int approved_by FK "recording officer"
        datetime created_at
    }
    audit_logs {
        int id PK
        int actor_id FK "nullable — detached rows remain"
        varchar action "e.g. LOGIN, REPORT_GENERATED, PROCUREMENT_FINALIZED"
        varchar entity_type
        varchar entity_id
        text details
        datetime timestamp
    }
